# GPT1

./: .env  .env.backup  .gitignore  ARCHITECTURE.md  README.md  SEARXNG_FIX.md  api.py  cli.py  config.ini  docker-compose.yml  pyproject.toml  searxng-settings.yml  setup.py  start.sh  start_with_searxng.sh  startup.py  test_agents_mock.py  test_browser_components.py
ag/: __main__.py  app.py  br.py  cfg.py  consts.py  cur.py  js.py  llm.py  logger.py  mem.py  nlp.py  plan.py  sch.py  sys_input.py
ag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conversations/browser_agent/: memory_2026-01-12_14-38-47.txt  memory_2026-01-12_16-29-02.txt  memory_2026-01-12_18-32-03.txt  memory_2026-01-12_18-52-12.txt  memory_2026-01-12_18-59-40.txt
conversations/casual_agent/: memory_2026-01-12_01-16-20.txt  memory_2026-01-12_01-21-07.txt  memory_2026-01-12_14-38-47.txt  memory_2026-01-12_16-24-11.txt  memory_2026-01-12_16-29-02.txt  memory_2026-01-12_16-46-00.txt  memory_2026-01-12_18-02-03.txt  memory_2026-01-12_18-32-03.txt
conversations/code_agent/: memory_2026-01-12_14-38-47.txt  memory_2026-01-12_16-46-00.txt  memory_2026-01-12_16-52-24.txt  memory_2026-01-13_00-07-22.txt  memory_2026-01-13_00-34-00.txt
conversations/file_agent/: memory_2026-01-12_18-02-03.txt  (+2 more)
sources/: browser.py  interaction.py  llm_provider.py  memory.py  router.py  speech_to_text.py  startup.py
tests/: test_browser_agent_parsing.py  test_cur.py  test_js.py  test_plan_boot.py  test_plan_ddg_captcha.py  test_plan_ddg_done.py  test_plan_google_sorry.py  test_plan_search.py  test_searx_search.py
(+24 files in other folders)
