[project]
name = "ag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "packaging>=23.0",
]

[project.optional-dependencies]
web = [
  "playwright>=1.41",
  "pyautogui>=0.9",
]
hf = [
  "transformers>=4.51",
  "huggingface-hub>=0.22",
  "accelerate>=0.27",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
